--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wanderlust</title>
-</head>
+<% layout('/layouts/boilerplate.ejs') -%>
 <body>
     <h2>Edit your Listing</h2>
     <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
@@ -23,4 +17,4 @@
         <button>Edit</button>
     </form>
 </body>
-</html>
+
