--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wanderlust</title>
-</head>
+<% layout('/layouts/boilerplate.ejs') -%>
 <body>
     <h2>Create New Listing</h2>
     <form action="/listings" method="POST">
@@ -23,4 +17,4 @@
          <button type="submit">Add</button>
     </form>
 </body>
-</html>
+
