--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -5,15 +5,18 @@
         <br><br>
         <h2>Create New Listing</h2>
 
-        <form action="/listings" method="POST">
+        <form action="/listings" method="POST" novalidate class="needs-validation">
             <div class="mb-3">
                 <label for="title" class="form-label">Title</label>
-                <input type="text" placeholder="Add a catchy title" name="listing[title]" class="form-control"> 
+                <input type="text" placeholder="Add a catchy title" name="listing[title]" class="form-control" required> 
+                <div class="valid-feedback">Looks good!</div>
+                <div class="invalid-feedback">Please Enter a valid Title</div>
             </div>
 
             <div class="mb-3"> 
                 <label for="description" class="form-label">Description</label>
-                <textarea name="listing[description]" class="form-control"></textarea>
+                <textarea name="listing[description]" class="form-control" required></textarea>
+                <div class="invalid-feedback">Please Enter a short Description</div>
             </div>
 
             <div class="mb-3">
@@ -24,17 +27,20 @@
             <div class="row">
                 <div class="mb-3 col-md-4">
                     <label for="price" class="form-label">Price</label>
-                    <input type="number" placeholder="1200" name="listing[price]" class="form-control"> 
+                    <input type="number" placeholder="1200" name="listing[price]" class="form-control" required> 
+                    <div class="invalid-feedback">Price should be valid</div>
                 </div>
                 <div class="mb-3 col-md-8">
                     <label for="country" class="form-label">Country</label>
-                    <input type="text" placeholder="India" name="listing[country]" class="form-control">
+                    <input type="text" placeholder="India" name="listing[country]" class="form-control" required>
+                    <div class="invalid-feedback">Country should be valid</div>
                 </div>
             </div>
 
             <div class="mb-3">
                 <label for="location" class="form-label">Location</label>
-                <input type="text" placeholder="Mumbai" name="listing[location]" class="form-control"> 
+                <input type="text" placeholder="Mumbai" name="listing[location]" class="form-control" required>
+                <div class="invalid-feedback">Location should be valid</div> 
             </div>
 
             <br>
