--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -7,7 +7,7 @@
             <% for (let listing of allListings) { %>
                 <a href="/listings/<%= listing._id %>" class="listing-link">
                     <div class="col">
-                        <div class="card shadow-sm" style="width: 100%; height: 100%;">
+                        <div class="card shadow-sm listing-card" style="width: 100%; height: 100%;">
                             <img src="<%= listing.image %>" class="card-img-top" alt="listing_images" 
                                 style="height: 18rem; object-fit: cover;">
                             
