--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -8,16 +8,16 @@
     <div class="card col-6 offset-3 show-card listing-card">
         <img class="card-img-top show-img" src="<%= listing.image %>" alt="Listing_image">
         <div class="card-body">
-            <p class="card-text">
-                <%= listing.description %> <br>
-                &#8377;<%= listing.price.toLocaleString("en-IN") %> <br>
-                <%= listing.location %> <br>
-                <%= listing.country %>  
-            </p>
+            <p class="card-text"> Owned by <i><%= listing.owner.username %></i></p>
+            <p class="card-text"> <%= listing.description %> </p>
+            <p class="card-text"> &#8377;<%= listing.price.toLocaleString("en-IN") %> </p>
+            <p class="card-text"> <%= listing.location %> </p>
+            <p class="card-text"> <%= listing.country %> </p>  
         </div>
     </div>
     <br>
 
+    
     <div class="btns">
         <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
     
@@ -25,6 +25,7 @@
             <button class="btn btn-dark offset-5">Delete</button>
         </form>
     </div>
+   
     <div class="col-8 offset-3 mb-3">
         <hr>
         <h4>Leave a Review</h4>
