--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -17,7 +17,7 @@
     </div>
     <br>
 
-    
+    <% if(currUser && listing.owner._id.equals(currUser._id)) { %>
     <div class="btns">
         <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
     
@@ -25,9 +25,12 @@
             <button class="btn btn-dark offset-5">Delete</button>
         </form>
     </div>
-   
+    <% } %>
+    
+    
     <div class="col-8 offset-3 mb-3">
         <hr>
+        <% if(currUser) { %>
         <h4>Leave a Review</h4>
         <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
             <div class="mt-3 mb-3">
@@ -42,12 +45,14 @@
             <button class="btn btn-outline-dark">Submit</button>
         </form>
         <hr>
+        <% } %>
+        
         <p><b>All Reviews</b></p>
         <div class="row">
         <% for( reviews of listing.review ){ %>
             <div class="card col-5 ms-3 mb-3">
                 <div class="card-body">
-                    <h5 class="card-title">Tushar Pathare</h5>
+                    <h5 class="card-title"><%= reviews.author.username %> </h5>
                     <p class="card-text"><%= reviews.comment %></p>
                     <p class="card-text"><%= reviews.rating %> stars</p>
                 </div>
