--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -6,7 +6,7 @@
     </div>
 
     <div class="card col-6 offset-3 show-card listing-card">
-        <img class="card-img-top show-img" src="<%= listing.image %>" alt="Listing_image">
+        <img class="card-img-top show-img" src="<%= listing.image.url %>" alt="Listing_image">
         <div class="card-body">
             <p class="card-text"> Owned by <i><%= listing.owner.username %></i></p>
             <p class="card-text"> <%= listing.description %> </p>
@@ -34,8 +34,20 @@
         <h4>Leave a Review</h4>
         <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
             <div class="mt-3 mb-3">
-                <label for="rating" class="form-label">Rating</label>
-                <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
+            <label for="rating" class="form-label">Rating</label>
+            <fieldset class="starability-slot">
+                <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+                <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                <label for="first-rate1" title="Terrible">1 star</label>
+                <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                <label for="first-rate2" title="Not good">2 stars</label>
+                <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                <label for="first-rate3" title="Average">3 stars</label>
+                <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                <label for="first-rate4" title="Very good">4 stars</label>
+                <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                <label for="first-rate5" title="Amazing">5 stars</label>
+            </fieldset>
             </div>
             <div class="mt-3 mb-3">
                 <label for="comment" class="form-label">Comment</label>
@@ -53,8 +65,8 @@
             <div class="card col-5 ms-3 mb-3">
                 <div class="card-body">
                     <h5 class="card-title"><%= reviews.author.username %> </h5>
+                    <p class="starability-result card-text" data-rating="<%= reviews.rating %>"></p>
                     <p class="card-text"><%= reviews.comment %></p>
-                    <p class="card-text"><%= reviews.rating %> stars</p>
                 </div>
                 <form action="/listings/<%= listing._id %>/reviews/<%= reviews._id%>?_method=DELETE" class="mb-3 ms-3" method="POST">
                     <button class="btn  btn-sm btn-dark">Delete</button>
