--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -4,7 +4,7 @@
     <div class="col-8 offset-2">
         <h2>Edit your Listing</h2>
 
-        <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
+        <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation" enctype="multipart/form-data">
             <div class="mb-3">
                 <label for="title" class="form-label">Title</label>
                 <input type="text" value="<%= listing.title %>" name="listing[title]" class="form-control" required>
@@ -17,11 +17,15 @@
                 <textarea name="listing[description]" class="form-control" required><%= listing.description %></textarea>
                 <div class="invalid-feedback">Please Enter a short Description</div>
             </div>
+            
+            <div class="mb-3 preview">
+                Original Listing Image<br>
+                <img src="<%= originalImageUrl %>" id="imagePreview" alt="Image Preview" style="display: block; width: 150px; height: auto;">
+            </div>
 
             <div class="mb-3">
-                <label for="image" class="form-label">Image Link</label>
-                <input type="text" value="<%= listing.image %>" name="listing[image]" class="form-control" required>
-                <div class="invalid-feedback">Please Enter a valid image</div>
+                <label for="image" class="form-label">Upload Image</label>
+                <input type="file" name="listing[image]" class="form-control">
             </div>
 
             <div class="row">
