--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -4,37 +4,58 @@
     <div class="row">
         <div class="col-8 offset-2">
             <h3>Edit Your Listing:</h3>
-            <form method="post" action="/listings/<%= listings.id %>?_method=PUT" >
+            <form method="post" action="/listings/<%= listings.id %>?_method=PUT" novalidate class="needs-validation">
                 <div class="mb-3">
                     <label for="title" class="form-label">Title:</label>
-                    <input placeholder="Add a catchy title" value="<%= listings.title%>" name="listing[title]" type="text" class="form-control">
+                    <input placeholder="Add a catchy title" value="<%= listings.title%>" name="listing[title]" type="text" class="form-control" required>
+                    <div class="valid-feedback">
+                       Title Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                       Please Enter a Title
+                    </div>
                 </div>
 
                 <div class="mb-3">
                     <label for="description" class="form-label">Description:</label>
-                    <textarea name="listing[description]" rows="5" cols="20" placeholder="Enter Description" class="form-control"><%= listings.description%></textarea>
+                    <textarea name="listing[description]" rows="5" cols="20" placeholder="Enter Description" class="form-control" required><%= listings.description%></textarea>
+                    <div class="invalid-feedback">
+                       Please Enter a short description
+                    </div>
                 </div>
 
                 <div class="mb-3">
                     <label for="image" class="form-label">Image Link:</label>
-                    <input placeholder="Paste Image Link" name="listing[image]" type="text" value="<%= listings.image%>" class="form-control">
+                    <input placeholder="Paste Image Link" name="listing[image]" type="text" value="<%= listings.image%>" class="form-control" required>
+                    <div class="invalid-feedback">
+                       Please Enter a valid link
+                    </div>
                 </div>
 
                 <div class="row">
                     <div class="mb-3 col-md-4">
                         <label for="price" class="form-label">Price:</label>
-                        <input placeholder="1200" name="listing[price]" type="number" value="<%= listings.price%>" class="form-control">
+                        <input placeholder="1200" name="listing[price]" type="number" value="<%= listings.price%>" class="form-control" required>
+                        <div class="invalid-feedback">
+                            Price Should be valid!
+                        </div>
                     </div>
 
                     <div class="mb-3 col-md-8">
                         <label for="country" class="form-label">Country:</label>
-                        <input placeholder="India" name="listing[country]" type="text" value="<%= listings.country%>" class="form-control">
+                        <input placeholder="India" name="listing[country]" type="text" value="<%= listings.country%>" class="form-control" required>
+                        <div class="invalid-feedback">
+                            Country name Should be valid!
+                        </div>
                     </div>
                 </div>
                 
                 <div class="mb-3">
                     <label for="location" class="form-label">Location:</label>
-                    <input placeholder="Maharashtra" name="listing[location]" type="text" value="<%= listings.location%>" class="form-control">
+                    <input placeholder="Maharashtra" name="listing[location]" type="text" value="<%= listings.location%>" class="form-control" required>
+                    <div class="invalid-feedback">
+                       location Should be valid!
+                    </div>
                 </div>
 
                 <button class="btn btn-dark add-btn">Add</button>
