add server side validation

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -8,7 +8,7 @@
                 <img src="<%=listings.image%>" class="card-img-top show-img" alt="listing_image">
                 <div class="card-body">
                     <p class="card-text"><%=listings.description %></p>
-                    <p class="card-text">&#8377;<%=listings.price.toLocaleString("en-IN")%></p>
+                    <p class="card-text">&#8377;<%=listings.price ? listings.price.toLocaleString("en-IN"):"NA"%></p>
                     <p class="card-text"><%=listings.location%></p>
                     <p class="card-text"><%=listings.country%></p>
                 </div>
