--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -2,15 +2,15 @@
 <body>
     <h3>All Listings</h3>
 <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1">
-    <% for( listings of allListings){ %>
-        <a href="/listings/<%=listings.id%>" class="listings-link">
+    <% for( listing of allListings){ %>
+        <a href="/listings/<%=listing._id%>" class="listings-link">
             <div class="card col">
-                <img src="<%=listings.image%>" class="card-img-top" alt="listing_image" style="height: 20rem;">
+                <img src="<%=listing.image%>" class="card-img-top" alt="listing_image" style="height: 20rem;">
                 <div class="card-img-overlay"></div>
                     <div class="card-body">
                         <p class="card-text">
-                            <b><%=listings.title%></b><br>
-                            &#8377;<%=listings.price.toLocaleString("en-IN")%>/night
+                            <b><%=listing.title%></b><br>
+                            &#8377;<%=listing.price ? listing.price.toLocaleString("en-IN") : "N/A" %>/night
                         </p>
                     </div>
             </div>
