--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -7,6 +7,7 @@
         <div class="listing-card col-6 offset-3 show-card">
             <img src="<%=listings.image%>" class="card-img-top show-img" alt="listing_image">
             <div class="card-body">
+                <p class="card-text">Owned by: <%=listings.owner.username %></p>
                 <p class="card-text"><%=listings.description %></p>
                 <p class="card-text">&#8377;<%=listings.price.toLocaleString("en-IN")%></p>
                 <p class="card-text"><%=listings.location%></p>
@@ -15,12 +16,14 @@
         </div>
     </div>
 
-    <div class="btns">
-        <a href="/listings/<%= listings._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
-        <form action="/listings/<%= listings._id %>?_method=DELETE" method="post">
-            <button class="btn btn-dark offset-5">Delete</button>
-        </form>
-    </div>
+    <% if(currUser && currUser._id.equals(listings.owner._id)){%>
+        <div class="btns">
+            <a href="/listings/<%= listings._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
+            <form action="/listings/<%= listings._id %>?_method=DELETE" method="post">
+                <button class="btn btn-dark offset-5">Delete</button>
+            </form>
+        </div>
+    <%}%>
 
     <div class="col-8 offset-3 mb-3">
         <hr>
