--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -16,17 +16,19 @@
         </div>
     </div>
 
-    <% if(currUser && currUser._id.equals(listings.owner._id)){%>
-        <div class="btns">
-            <a href="/listings/<%= listings._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
-            <form action="/listings/<%= listings._id %>?_method=DELETE" method="post">
-                <button class="btn btn-dark offset-5">Delete</button>
-            </form>
-        </div>
+    <% if(currUser && listings.owner._id.equals(currUser._id)) {%>
+    <div class="btns">
+        <a href="/listings/<%= listings._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
+        <form action="/listings/<%= listings._id %>?_method=DELETE" method="post">
+            <button class="btn btn-dark offset-5">Delete</button>
+        </form>
+    </div>
     <%}%>
-
+    
+    
     <div class="col-8 offset-3 mb-3">
         <hr>
+        <% if(currUser) {%>
         <h4>Leave a Review</h4>
         <form action="/listings/<%= listings.id %>/reviews" method="post" class="needs-validation" novalidate>
             <div class="mb-3 mt-3">
@@ -43,19 +45,23 @@
             <button class=" btn btn-dark">Submit</button>
         </form>
         <hr>
+        <% } %>
+        
 
         <p><b>All Reviews</b></p>
         <div class="row">
             <% for(review of listings.reviews) { %>
                 <div class="card col-5 ms-3 mb-3">
                     <div class="card-body">
-                        <h5 class="card-title">Jane Doe</h5>
+                        <h5 class="card-title">@<%=review.author.username%></h5>
                         <p class="card-text"><%=review.comment%></p>
                         <p class="card-text"><%=review.rating%> stars</p>
                     </div>
-                    <form action="/listings/<%= listings.id %>/reviews/<%= review._id %>?_method=DELETE" method="post" class="mb-2">
-                        <button class="btn btn-sm btn-dark">Delete</button>
-                    </form>
+                    <% if(currUser&&review.author._id.equals(currUser._id)){%>
+                        <form action="/listings/<%= listings.id %>/reviews/<%= review._id %>?_method=DELETE" method="post" class="mb-2">
+                            <button class="btn btn-sm btn-dark">Delete</button>
+                        </form>
+                    <% }%>
                 </div>
             <%}%>
         </div>
