--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -6,14 +6,14 @@
         <% for( listing of allListings){ %>
             <a href="/listings/<%= listing._id %>" class="listings-link">
                 <div class="listing-card col">
-                    <img src="<%=listing.image%>" class="card-img-top" alt="listing_image" style="height: 20rem;">
+                    <img src="<%=listing.image.url%>" class="card-img-top" alt="listing_image" style="height: 20rem;">
                         <div class="card-body">
                             <p class="card-text">
                                 <b><%=listing.title%></b><br>
                                 &#8377;<%=listing.price.toLocaleString("en-IN")%>/night
                             </p>
                         </div>
-                    </div>
+                </div>
             </a>
         <% } %>
     </div>
