--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-8 offset-2">
             <h3>Create a New Listings:</h3>
-            <form method="post" action="/listings" novalidate class="needs-validation">
+            <form method="post" action="/listings" novalidate class="needs-validation" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="title" class="form-label">Title:</label>
                     <input placeholder="Add a catchy title" name="listing[title]" type="text" class="form-control" required>
@@ -21,8 +21,8 @@
                 </div>
         
                 <div class="mb-3">
-                    <label for="image" class="form-label">Image Link:</label>
-                    <input placeholder="Paste Image Link" name="listing[image]" type="text" class="form-control">
+                    <label for="image" class="form-label">Upload Listing Image</label>
+                    <input placeholder="Paste Image Link" name="listing[image]" type="file" class="form-control">
                 </div>
                 
                 <div class="row">
