--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -22,7 +22,7 @@
         
                 <div class="mb-3">
                     <label for="image" class="form-label">Upload Listing Image</label>
-                    <input placeholder="Paste Image Link" name="listing[image]" type="file" class="form-control">
+                    <input placeholder="Please upload image" name="listing[image]" type="file" class="form-control" required>
                 </div>
                 
                 <div class="row">
