--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -12,6 +12,10 @@
                 <p class="card-text">&#8377;<%=listings.price.toLocaleString("en-IN")%></p>
                 <p class="card-text"><%=listings.location%></p>
                 <p class="card-text"><%=listings.country%></p>
+                <p class="card-text">
+                    <span class="badge bg-primary">Category: <%= listings.category %></span>
+                </p>
+
             </div>
         </div>
     </div>
