--- a/public/css/style.css
+++ b/public/css/style.css
@@ -113,3 +113,44 @@ body{
     padding-left: 0;
     padding-right: 0;
 }
+
+#filters{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+#filters a{
+    color: black;
+    text-decoration: none;
+}
+
+.filter{
+    text-align: center;
+    margin-right: 2rem;
+    margin-top: 2rem;
+    opacity: 0.5;
+}
+
+.filter:hover{
+    opacity: 1;
+    cursor: pointer;
+}
+
+.filter p{
+    font-size: 0.8rem;
+}
+
+.tax-info{
+    display: none;
+}
+
+.tax-toggle{
+    border: 1px solid black;
+    border-radius: 1rem;
+    height: 3.5rem;
+    padding: 0.8rem;
+    margin-left: 5rem;
+    display: flex;
+    align-items: center;
+}
