--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,20 +1,128 @@
 <% layout("/layouts/boilerplate")%>
-<body>
-    
-    <h3>All Listings</h3>
-    <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1">
-        <% for( listing of allListings){ %>
-            <a href="/listings/<%= listing._id %>" class="listings-link">
-                <div class="listing-card col">
-                    <img src="<%=listing.image.url%>" class="card-img-top" alt="listing_image" style="height: 20rem;">
-                        <div class="card-body">
-                            <p class="card-text">
-                                <b><%=listing.title%></b><br>
-                                &#8377;<%=listing.price.toLocaleString("en-IN")%>/night
-                            </p>
-                        </div>
-                </div>
-            </a>
-        <% } %>
+
+<div id="filters">
+    <a href="/listings?category=trending">
+        <div class="filter">
+            <div>
+                <i class="fa-solid fa-fire"></i>
+            </div>
+            <p>Trending</p>
+        </div>
+    </a>
+
+    <a href="/listings?category=rooms">
+        <div class="filter">
+            <div>
+                <i class="fa-solid fa-bed"></i>
+            </div>
+            <p>Rooms</p>
+        </div>
+    </a>
+
+    <a href="/listings?category=iconic-cities">
+        <div class="filter">
+            <div>
+                <i class="fa-solid fa-mountain-city"></i>
+            </div>
+            <p>Iconic Cities</p>
+        </div>
+    </a>
+
+    <a href="/listings?category=mountains">
+        <div class="filter">
+            <div>
+                <i class="fa-solid fa-mountain"></i>
+            </div>
+            <p>Mountains</p>
+        </div>
+    </a>
+
+    <a href="/listings?category=castles">
+        <div class="filter">
+            <div>
+                <i class="fa-brands fa-fort-awesome"></i>
+            </div>
+            <p>Castles</p>
+        </div>
+    </a>
+
+    <a href="/listings?category=arctic-pools">
+        <div class="filter">
+            <div>
+                <i class="fa-solid fa-person-swimming"></i>
+            </div>
+            <p>Arctic Pools</p>
+        </div>
+    </a>
+
+    <a href="/listings?category=campings">
+        <div class="filter">
+            <div>
+                <i class="fa-solid fa-campground"></i>
+            </div>
+            <p>Campings</p>
+        </div>
+    </a>
+
+    <a href="/listings?category=farms">
+        <div class="filter">
+            <div>
+                <i class="fa-solid fa-cow"></i>
+            </div>
+            <p>Farms</p>
+        </div>
+    </a>
+
+    <a href="/listings?category=arctic">
+        <div class="filter">
+            <div>
+                <i class="fa-solid fa-snowflake"></i>
+            </div>
+            <p>Arctic</p>
+        </div>
+    </a>
+
+    <a href="/listings?category=beachfront">
+        <div class="filter">
+            <div>
+                <i class="fa-solid fa-umbrella-beach"></i>
+            </div>
+            <p>BeachFront</p>
+        </div>
+    </a>
+
+    <a href="/listings?category=luxury">
+        <div class="filter">
+            <div>
+                <i class="fa-solid fa-gem"></i>
+            </div>
+            <p>Luxury</p>
+        </div>
+    </a>
+
+    <div class="tax-toggle">
+        <div class="form-check-reverse form-switch">
+            <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
+            <label class="form-check-label" for="switchCheckDefault">Display Total After Taxes</label>
+        </div>
     </div>
-</body>
+
+</div>
+
+
+<div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1 mt-3">
+    <% for( listing of allListings){ %>
+        <a href="/listings/<%= listing._id %>" class="listings-link">
+            <div class="listing-card col">
+                <img src="<%=listing.image.url%>" class="card-img-top" alt="listing_image" style="height: 20rem;">
+                    <div class="card-body">
+                        <p class="card-text">
+                            <b><%=listing.title%></b><br>
+                                &#8377;<%=listing.price.toLocaleString("en-IN")%>/night
+                                <i class="tax-info">&nbsp; &nbsp; +18% GST</i>
+                        </p>
+                    </div>
+            </div>
+        </a>
+    <% } %>
+</div>
