--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -10,6 +10,13 @@
       </div>
 
       <div class="navbar-nav ms-auto">
+        <form class="d-flex" role="search" action="/listings" method="GET">
+          <input class="form-control me-2 search-input" type="search" placeholder="Search destinations" name="q" />
+          <button class="btn btn-search" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
+        </form>
+      </div>
+
+      <div class="navbar-nav ms-auto">
         <a class="nav-link" href="/listings/new">Airbnd your home</a>
         <% if(!currUser){ %>
           <a class="nav-link" href="/signup"><b>Sign up</b></a>
