--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,9 +1,15 @@
 <footer>
     <div class="f-info">
         <div class="f-info-socials">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.facebook.com/WanderLust" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="https://www.instagram.com/staywander" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://www.linkedin.com/company/wanderlust" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
         </div>
         <div class="f-info-brand">&copy;WanderLust Private Limited
         </div>
