--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate")%>
 
 <div class="row mt-3">
-    <div class="alert alert-danger col-6 offset-3" role="alert">
+    <div class="alert alert-danger col-10 offset-1 col-md-6 offset-md-3" role="alert">
         <p class="alert-heading"><%=err.message%></p>
     </div>
 </div>
