--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -9,14 +9,14 @@
         <a class="nav-link" href="/listings">Explore</a>
       </div>
 
-      <div class="navbar-nav ms-auto">
+      <div class="navbar-nav mx-auto">
         <form class="d-flex" role="search" action="/listings" method="GET">
           <input class="form-control me-2 search-input" type="search" placeholder="Search destinations" name="q" />
           <button class="btn btn-search" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
         </form>
       </div>
 
-      <div class="navbar-nav ms-auto">
+      <div class="navbar-nav">
         <a class="nav-link" href="/listings/new">Airbnd your home</a>
         <% if (typeof currUser !== 'undefined' && currUser) { %>
           <a class="nav-link" href="/logout"><b>Log out</b></a>
